[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Eric Liu <eliu390@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.3.2"
gunicorn = "^20.1.0"
requests = "^2.31.0"
flask-cors = "^4.0.0"
boto3 = "^1.28.2"
flask-s3 = "^0.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
